custom scorecard testing

--- a/config/scorecard/patches/olm.config.yaml
+++ b/config/scorecard/patches/olm.config.yaml
@@ -4,7 +4,7 @@
     entrypoint:
     - scorecard-test
     - olm-bundle-validation
-    image: quay.io/operator-framework/scorecard-test:v1.18.1
+    image: quay.io/operator-framework/scorecard-test:v1.31.0
     labels:
       suite: olm
       test: olm-bundle-validation-test
@@ -14,7 +14,7 @@
     entrypoint:
     - scorecard-test
     - olm-crds-have-validation
-    image: quay.io/operator-framework/scorecard-test:v1.18.1
+    image: quay.io/operator-framework/scorecard-test:v1.31.0
     labels:
       suite: olm
       test: olm-crds-have-validation-test
@@ -24,27 +24,28 @@
     entrypoint:
     - scorecard-test
     - olm-crds-have-resources
-    image: quay.io/operator-framework/scorecard-test:v1.18.1
+    image: quay.io/operator-framework/scorecard-test:v1.31.0
     labels:
       suite: olm
       test: olm-crds-have-resources-test
-- op: add
-  path: /stages/0/tests/-
-  value:
-    entrypoint:
-    - scorecard-test
-    - olm-spec-descriptors
-    image: quay.io/operator-framework/scorecard-test:v1.18.1
-    labels:
-      suite: olm
-      test: olm-spec-descriptors-test
-- op: add
-  path: /stages/0/tests/-
-  value:
-    entrypoint:
-    - scorecard-test
-    - olm-status-descriptors
-    image: quay.io/operator-framework/scorecard-test:v1.18.1
-    labels:
-      suite: olm
-      test: olm-status-descriptors-test
+#NOTE(dprince): disabled
+#- op: add
+#  path: /stages/0/tests/-
+#  value:
+#    entrypoint:
+#    - scorecard-test
+#    - olm-spec-descriptors
+#    image: quay.io/operator-framework/scorecard-test:v1.31.0
+#    labels:
+#      suite: olm
+#      test: olm-spec-descriptors-test
+#- op: add
+#  path: /stages/0/tests/-
+#  value:
+#    entrypoint:
+#    - scorecard-test
+#    - olm-status-descriptors
+#    image: quay.io/operator-framework/scorecard-test:v1.31.0
+#    labels:
+#      suite: olm
+#      test: olm-status-descriptors-test
